# Own_Projects

./: .gitignore  184657_2.asm  184657_2.cpp  184657_Panfil_B1_9_11.tex  6_3.asm  6_5.asm  Combinations and variations.cpp  Dictionary.cpp  Dynamic_data_structures.c  Generators.py  Infix to postfix with own stack.cpp  MACD.py  OpenCV.cpp  Project 1 Alghorytms and date structures .cpp  TicTacToe.swift  ciaglosc.asm  lab2Grafika.c  lowestNotAbundantSum.hs  skaner.cpp  temp.cpp  tester.cpp  treesort.pl
algorytmy_grafowe/: m07_complexity_of_token_swapping.tex
architektury_glebokiego_uczenia/proj1/: sprawozdanie.tex
architektury_glebokiego_uczenia/zad1/: 184657_Panfil_Wojciech_Zad1.ipynb  graph.tex
architektury_glebokiego_uczenia/zad2/: agu_wykl2.ipynb
jezyki_skryptowe/proj1/: 184657_Panfil_Wojciech_Zadanie_1.tex
jezyki_skryptowe/proj1/oct_c/: CMakeLists.txt  my_oct.c  my_oct.h  my_oct_perf_test.c  my_oct_test.c
jezyki_skryptowe/proj1/oct_python/: my_oct.py  my_oct_tests.py  test_data_generator.py
jezyki_skryptowe/proj2/task/: CMakeLists.txt  graphs.py  my_test.py  (+5 more)
jezyki_skryptowe/proj3/: 184657_Panfil_Wojciech_3.tex  clock.py  clock_gtk.py  clock_qt.py
jezyki_skryptowe/proj5/: 184657_Panfil_Wojciech_FlowersRecognition.tex  dataset_downloader.py  flowers-classification-pytorch.ipynb  main.ipynb  main.py
krypto/: common.h  compile.sh  hash_function.cpp  main  main.cpp  test  test.cpp  wyniki
wapf/lab1/: zad1.fsx
wapf/lab2/: homework.fsx  plik.fsx
wapf/lab3/: bonus.fsx  homework.fsx
wapf/lab4/: zad1.fsx  zad2_1.fsx  zad2_2.fsx
wapf/lab5/: main.js
(+20 files in other folders)
